tests/snapshots/examples_fixtures/aoc__2024__day06_test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day06_test.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:24:5
   |
24 |     assert_eq(Day06.day06a_from_lines(sample_grid()), 41)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:29:5
   |
29 |     assert_eq(Day06.day06b_from_lines(sample_grid()), 6)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:38:5
   |
38 |     assert_eq(Day06.day06a_from_lines(grid), 2)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:46:5
   |
46 |     assert_eq(Day06.day06b_from_lines(grid), 0)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:59:5
   |
59 |     assert_eq(Day06.day06a_from_lines(grid), 2)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:78:5
   |
78 |     assert_eq(result_b >= 0, true)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:84:5
   |
84 |     assert_eq(Day06.day06a_from_lines(grid), 1)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:85:5
   |
85 |     assert_eq(Day06.day06b_from_lines(grid), 0)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;

Found 8 errors.
== stdout ==
<not executed>
